bk_ida/gccida/c1/output_asm_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/final.c:3623:25: error: use of undeclared identifier 'off_607A24'
fprintf( asm_out_file, &off_607A24[1], ( unsigned int)insn_counter); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/final.c:3633:7: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v12 = sch_istable[( unsigned __int8)v7]; 
      ^~~~~~~~~~~
      _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/final.c:3637:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( ( unsigned __int8 *)v2 + 2)] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/final.c:3650:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v20] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/final.c:3725:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v18] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/output_asm_insn/src/obj/final.o] Error 1
